--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "rm -rf ./build && aws s3 rm s3://newtab.jonathanearl.io/ --recursive && yarn build && aws s3 cp ./build s3://newtab.jonathanearl.io/ --recursive"
   }
 }
