--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.5.1",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
