--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.5.1",
     "react-icons": "^3.0.5",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "styled-components": "^3.4.6"
   },
