add close buttons to workspace and sites

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,6 +25,7 @@
         "tabs",
         "activeTab",
         "http://*/*",
-        "https://*/*"
+        "https://*/*",
+        "history"
     ]
 }
