remove deploy (no longer runnign this externally"

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf bkmrkr.zip && react-scripts build && zip -r bkmrkr.zip build",
-    "eject": "react-scripts eject",
-    "deploy": "rm -rf ./build && aws s3 rm s3://newtab.jonathanearl.io/ --recursive && yarn build && aws s3 cp ./build s3://newtab.jonathanearl.io/ --recursive"
+    "eject": "react-scripts eject"
   }
 }
