--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
     "content_scripts": [{
         "matches": ["http://localhost:3000/*"],
         "js": ["content.js"],
-        "run_at": "document_start"
+        "run_at": "document_idle"
     }],
     "chrome_url_overrides": {
         "newtab": "index.html"
