--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "bkmrkr",
     "description": "Easily save and handle new book marks",
-    "version": "1.0.1",
+    "version": "1.0.3",
     "background": {
         "scripts": ["background.js"],
         "persistent": false
@@ -17,6 +17,11 @@
     },
     "externally_connectable": {
         "matches": ["http://localhost:3000/*"]
+    },
+    "icons": { 
+        "16": "/image/bookmark-16.png",
+        "32": "/image/bookmark-32.png",
+       "128": "/image/bookmark-128.png" 
     },
     "permissions": [
         "tabs"
