--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.5.1",
     "react-icons": "^3.0.5",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.4.2",
     "styled-components": "^3.4.6"
   },
   "scripts": {
