--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.1",
     "redux-devtools": "^3.4.2",
-    "styled-components": "^3.4.6"
+    "styled-components": "^3.4.6",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
