--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^16.5.1",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
